# robotics

./: CMakeLists.txt
inc/: invkin.hpp  joint.hpp  link.hpp  rob_mat.hpp  robot.hpp  robot_system.hpp  traj_generator.hpp
src/: robot.cpp
test/: test_rob_mat.cpp  test_robot.cpp  test_traj_generator.cpp
